# oabs

./: Cargo.toml  main copy.rs  rustfmt.toml
.github/workflows/: ci.yml  publish.yml
cli/: Cargo.toml
cli/src/client/: main.rs
cli/src/common/: lib.rs  signal.rs
cli/src/server/: main.rs
gui/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  output.css  package-lock.json  package.json  tailwind.config.js
gui/input/: app.scss
gui/public/: .keep
gui/src/: App.vue  app.rs  main.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: history.rs  lib.rs
gui/src/app/: app.rs  tauri_api.rs
gui/src/lib/: lib.rs  platform.rs
gui/src/lib/tauri_api/: dialog.rs
gui2/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js
gui2/src/: app.rs
gui2/src-tauri/: Cargo.toml  tauri.conf.json
gui2/src-tauri/capabilities/: default.json
gui2/src-tauri/src/: history.rs  lib.rs  main.rs
lib/: Cargo.toml
lib/src/: client.rs  lib.rs
lib/src/audio/: mod.rs
lib/src/audio/vorbis/: decoder.rs  encoder.rs  mod.rs
lib/src/client/: controller.rs
lib/src/common/: constants.rs  serializers.rs
lib/src/server/: controller.rs  mod.rs  upnp.rs
src/: common.rs  server.rs
src/client/: controller.rs  main.rs
src/common/: history.rs  lib.rs
src/server/: main.rs  upnp.rs
