[package]
name = "oabs"
version = "0.1.0"
edition = "2021"

[lib]
name = "oabs_lib"
path = "src/common/lib.rs"

[[bin]]
name = "oabs_server"
path = "src/server/main.rs"

[[bin]]
name = "oabs_client"
path = "src/client/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
cpal = { version = "0.15.3", features = ["oboe-shared-stdcxx"] }
dirs = "5.0.1"
ringbuf = "0.4.1"
rodio = "0.18"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
vorbis_rs = "0.5.4"
