[package]
name = "oabs"
version = "0.1.0"
edition = "2021"

[lib]
name = "oabs_lib"
path = "src/common/lib.rs"

[[bin]]
name = "oabs_server"
path = "src/server/main.rs"

[[bin]]
name = "oabs_client"
path = "src/client/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
cpal = { version = "0.15.3", features = ["oboe-shared-stdcxx"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "5.0.1"
log = "0.4.21"
ringbuf = "0.4.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
aotuv_lancer_vorbis_sys = "0.1.4"
ogg_next_sys = "0.1.3"
rand = "0.8.5"
strum = { version = "0.26.2", features = ["derive"] }
