[package]
name = "oabs"
version = "0.1.0"
edition = "2021"

[lib]
name = "oabs_lib"
path = "src/common/lib.rs"

[[bin]]
name = "oabs_server"
path = "src/server/main.rs"

[[bin]]
name = "oabs_client"
path = "src/client/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
cpal = { version = "0.15", features = ["oboe-shared-stdcxx"] }
dialoguer = { version = "0.11", features = ["fuzzy-select", "history"] }
dirs = "5.0"
log = "0.4"
ringbuf = "0.4"
rupnp = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aotuv_lancer_vorbis_sys = "0.1"
ogg_next_sys = "0.1"
rand = "0.8"
strum = { version = "0.26", features = ["derive"] }
futures = "0.3.30"
local-ip-address = "0.6.1"
