[package]
name = "oabs_client_ui"
version = "0.0.0"
edition = "2021"

[lib]
name = "oabs_client_ui_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "oabs_client_ui"
path = "src/app/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["DomRect", "Navigator", "NetworkInformation", "ConnectionType"] }
