[package]
name = "oabs_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "oabs_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aotuv_lancer_vorbis_sys = "0.1"
cpal = { version = "0.15", features = ["oboe-shared-stdcxx"] }
dirs = "5.0"
futures = "0.3.30"
local-ip-address = "0.6.1"
log = "0.4"
ogg_next_sys = "0.1"
rand = "0.8"
ringbuf = "0.4"
rupnp = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7.11"
