[package]
name = "oabs_lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "oabs_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aotuv_lancer_vorbis_sys = "0.1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
cpal = { version = "0.16", features = ["oboe-shared-stdcxx"] }
dirs = "5.0"
futures = "0.3"
local-ip-address = "0.6"
log = "0.4"
ogg_next_sys = "0.1"
rand = "0.8"
ringbuf = "0.4"
rupnp = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7"
